@@ -1,5 +1,8 @@
 test:
 	cd regress/ && make && make test
+
+test-all:
+	cd regress/ && make && make test
 	cd functional/ && make test
 
 clean:
