@@ -5,16 +5,24 @@ The goal of these two custom testing frameworks is to avoid changes to mdp to
 break existing functionality. We attempt to accomplish this goal by using two
 separate methodology, each in its own folder.
 
+    regress/
+
+        The regression tests are supposed to be one step away from unit tests
+        and a less high-level as functional tests. They test larger blocks of
+        abstractions that are not necessarily well tested in the functional
+        tests.
+
     functional/
 
         This is an attempt at some form of functional testing for mdp. These
         tests run mdp in similar ways a user would. It tests flags, return
-        codes from the command, stderr, stdout, it also test timing,
-        interaction with the file system.
+        codes from the command, stderr, stdout, it also tests timing and
+        interactions with the file system.
 
-    regress/
+        The functional test suite doesn't work well (or at all) when running
+        completely headless, probably due to the curses requirement. Due to
+        that, it is disabled from the general 'make test' and is only
+        accessible via 'make test-all'. However if you plan on porting mdp to
+        any new platform, make sure to run 'make-all' for each new release.
 
-	The regression tests are supposed to be one step away from unit tests
-	and a less high-level as functional tests. They test larger blocks of
-	abstractions that are not necessarily well tested in the functional
-	tests.
+# vim: expandtab
