@@ -1,5 +1,5 @@
 test:
-	sh ./run_tests.sh
+	sh ./_run_tests.sh
 
 clean:
 	rm -rf fake_gpg_home test.config test.stdout test.stderr test_gpg.batch
