@@ -1,13 +1,12 @@
-# Filter on two keywords, berry and black.
+# Filter on pass which is only found in a comment.
 
 # Populate the password file.
 use_config simple
 run_mdp -e
 
-run_mdp -r berry black > test.stdout
+run_mdp -r pass > test.stdout
 
 if diff test.stdout - << EOF
-blackberry black
 EOF
 then
 	echo pass
