@@ -1,7 +1,7 @@
 # First run to create a few password. We test the return code of this since
 # failing to create the initial password would cause this to die.
 
-use_config editor
+use_config simple
 
 if run_mdp -e; then
 	echo pass
